--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-	background-image: url("http://designurge.com/wp-content/uploads/2013/10/Halo-4-Twitter-Background-Pre.jpg");
+	background-image: url('http://rhiannon-kaulitzke/image.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 }
