--- a/css/custom.css
+++ b/css/custom.css
@@ -1983,6 +1983,7 @@ footer .row.no-gutters > [class*='col-'] {
 }
 
 .copyright-text p{
+	text-align: center;
 	font-size: 16px;
 	color: #fff;
 	letter-spacing: 0.05em;
